# vostuff

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.api  Dockerfile.web  JOURNAL.md  Leptos.toml  README.md  TODO.md  docker-compose-dev.yml  docker-compose.yml
.sqlx/: query-0bc66eec72587aae1d15fe63defd7be28a4a9cb28bb7ba350a97abd6e4636d03.json  query-17246bec5bb3e53081b35e2dc68c9d27ca9529061c08dbc7284a729df47ce048.json  query-3225ec0a0eb7398c43bd4f241a3de0394dd21abf9945b7716ebda1d53143c088.json  query-542c09ffffdd853eaba0518ffd0d29a75aab6bd6082254b3b9dced7c956a29fc.json  query-a581a3f89aaa04f4494dcacd48c56a04863f72ee1d8cc4fa64474a8bd7d0bbd5.json  query-cbd0fbcd17e2cc3bc99f6f7ccf57a89e17e36bb497655efb05731fd4afce62cd.json  query-fe6070455c6a2fac6c17734d157957c54ccf89def5f4d43c271ce77aaabca4f7.json
crates/vostuff-api/: Cargo.toml
crates/vostuff-api/.sqlx/: query-1da5e13c2bbec812f69566d328f00404ce9316035c5543f487b8343d6636796b.json  query-2fef6d07f28d32d13aa324a315f5a38c6c5b27dc4a8ead1dc60f08cd057d5556.json  query-309569f269b678d2b887060cf5e40e54c0d1458daef63e1c9e81fedae5e3e633.json  query-3c9ee7a150ca43551b130f6d7411691ecb68f74f5215fe457144465a3ed7d959.json  query-563967ca9b34f4764131bae2138682b5d136efc0af25e058c3b761999c9967f9.json  query-62293fd1d218c96fd762b23703cf9af7cd82d1ee6360331054cf144fecfae5e5.json  query-8dd68b6ce190c1ab37c4049bf881dc9d7fe5d949ab987ea5894a31661264f602.json  query-a1f8f6d17fdb22449cc8da35ff4981de0b63001d0f8010879a214dca34c1b815.json  query-c7a4e3339df58c948c75bed57dcda85ae6036dd5eaa72bbbb4e712145c50546d.json  query-c811e61c1d0263eb737e8c0f13ea48424795909f38ef8a2122b00c3321225c75.json  query-ecf55fa67b2f5c64386fcd4973e0f1ebe734f73094c804ffabdaacd56d8b79d1.json  query-eec24b57e4e865f02ced1a8b38805a13eda84d425e7e98ea7df9abbd75468c14.json
crates/vostuff-api/src/: lib.rs  main.rs  schema.rs  test_utils.rs
crates/vostuff-api/src/api/: middleware.rs  mod.rs  state.rs
crates/vostuff-api/src/api/handlers/: auth.rs  collections.rs  fields.rs  items.rs  kinds.rs  locations.rs  mod.rs  organizations.rs  tags.rs  users.rs
crates/vostuff-api/tests/: auth_tests.rs  authz_tests.rs  fields_tests.rs  items_tests.rs  kinds_tests.rs  multi_tenancy_tests.rs
crates/vostuff-api/tests/common/: mod.rs
crates/vostuff-core/: Cargo.toml
crates/vostuff-core/src/: auth.rs  lib.rs  models.rs  models.rs.bak2  models.rs.bak3
crates/vostuff-web/: Cargo.toml
crates/vostuff-web/src/: app.rs  lib.rs  main.rs
crates/vostuff-web/src/components/: create_item.rs  fields_manager.rs  filter_dropdown.rs  header.rs  items_table.rs  kinds_manager.rs  mod.rs  pagination.rs  soft_field_helpers.rs
crates/vostuff-web/src/pages/: home.rs  login.rs  settings.rs
crates/vostuff-web/src/server_fns/: auth.rs  fields.rs  items.rs  kinds.rs  mod.rs
crates/vostuff-web/style/: main.css
data/: CLZMovies20241015.csv
docs/: csv-import-plan.md  soft-fields-design.md
migrations/: 20240101000000_initial_schema.sql  20241128000000_add_user_password.sql  20241129000000_add_user_roles.sql  20241129100000_move_roles_to_user_organizations.sql  20260122000000_add_dvd_type.sql  20260309000000_soft_fields.sql  20260627000000_system_org_all_ones.sql
requirements/: functional.md
scripts/: init-db.sh
src/: auth.rs  lib.rs  schema.rs  test_utils.rs
src/api/: mod.rs  models.rs
src/api/handlers/: auth.rs  collections.rs  mod.rs  organizations.rs  tags.rs  users.rs
tests/: api_tests.rs
tests/common/: mod.rs
