[workspace]
members = [
    "crates/vostuff-core",
    "crates/vostuff-api",
    "crates/vostuff-web",
]
resolver = "2"

[workspace.dependencies]
# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Common types
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"

# CLI
clap = { version = "4.0", features = ["derive", "env"] }

# Web framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OpenAPI
utoipa = { version = "5.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Authentication
argon2 = "0.5"
jsonwebtoken = "9.0"
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies"] }

# Leptos (for web UI) - not used in workspace, only in vostuff-web
# leptos = { version = "0.7" }
# leptos_axum = { version = "0.7" }
# leptos_router = { version = "0.7" }
# leptos_meta = { version = "0.7" }

# WASM
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = "0.3"
