[workspace]
members = [
    "crates/vostuff-core",
    "crates/vostuff-api",
    "crates/vostuff-web",
]
resolver = "2"

[workspace.dependencies]
# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Common types
uuid = { version = "1.0", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }

# Error handling
anyhow = "1.0"

# CLI
clap = { version = "4.0", features = ["derive", "env"] }

# Web framework
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OpenAPI
utoipa = { version = "5.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Authentication
argon2 = "0.5"
jsonwebtoken = "9.0"
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"

# HTTP client
reqwest = { version = "0.12", features = ["json", "cookies"] }

# Leptos (for web UI) - not used in workspace, only in vostuff-web
# leptos = { version = "0.7" }
# leptos_axum = { version = "0.7" }
# leptos_router = { version = "0.7" }
# leptos_meta = { version = "0.7" }

# WASM
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
web-sys = "0.3"

# Leptos configuration for cargo-leptos
[[workspace.metadata.leptos]]
# The name of this Leptos project
name = "vostuff-web"

# The name used by cargo-leptos for the binary package
bin-package = "vostuff-web"

# The name used by cargo-leptos for the library package
lib-package = "vostuff-web"

# The site root folder is where cargo-leptos generate all output
site-root = "target/site"

# The site-root relative folder where all compiled output (JS, WASM and CSS) is written
site-pkg-dir = "pkg"

# The source CSS file
style-file = "crates/vostuff-web/style/main.css"

# Assets source dir. All files found here will be copied and synchronized to site-root
assets-dir = "crates/vostuff-web/assets"

# The IP and port where the server serves the content
site-addr = "127.0.0.1:3001"

# The port to use for automatic reload monitoring
reload-port = 3002

# Command to use when running end2end tests
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

# The browserlist query used for optimizing the CSS
browserquery = "defaults"

# Set by cargo-leptos watch when building with that tool
watch = false

# The environment Leptos will run in, usually `DEV` or `PROD`
env = "DEV"

# The features to use when compiling the bin target
bin-features = ["ssr"]

# If the --no-default-features flag should be used when compiling the bin target
bin-default-features = false

# The features to use when compiling the lib target
lib-features = ["hydrate"]

# If the --no-default-features flag should be used when compiling the lib target
lib-default-features = false

# The profile to use for the lib target when compiling for release
lib-profile-release = "wasm-release"

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
