[package]
name = "vostuff-api"
version = "0.1.0"
edition = "2024"

[dependencies]
# Internal dependencies
vostuff-core = { path = "../vostuff-core" }

# Database
sqlx = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Common types
uuid = { workspace = true }
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }

# CLI
clap = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# OpenAPI
utoipa = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Authentication
argon2 = { workspace = true }
jsonwebtoken = { workspace = true }
axum-extra = { workspace = true }
headers = { workspace = true }

[[bin]]
name = "schema-manager"
path = "src/bin/schema_manager.rs"

[[bin]]
name = "load-sample-data"
path = "src/bin/load_sample_data.rs"

[[bin]]
name = "api-server"
path = "src/bin/api_server.rs"
