[package]
name = "vostuff-core"
version = "0.1.0"
edition = "2024"

[dependencies]
# Database (server-only)
sqlx = { workspace = true, optional = true }

# Authentication (server-only)
argon2 = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }

# Common types
uuid = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }

# OpenAPI (for model schemas, server-only)
utoipa = { workspace = true, optional = true }

[features]
default = []
# Server-side features (not compatible with WASM)
server = ["sqlx", "argon2", "jsonwebtoken", "utoipa"]
