[package]
name = "vostuff-web"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Internal dependencies (server features enabled conditionally via features)
vostuff-core = { path = "../vostuff-core" }

# Leptos SSR + Hydration
leptos = { version = "0.6", default-features = false }
leptos_axum = { version = "0.6", optional = true }
leptos_router = { version = "0.6", default-features = false }
leptos_meta = { version = "0.6", default-features = false }

# Web server (server-side only)
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true, features = ["fs", "compression-gzip"] }
tokio = { workspace = true, optional = true }

# WASM (client-side only)
wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
web-sys = { workspace = true, features = ["Window", "Document", "Storage"] }

# Shared dependencies
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# HTTP client for server functions
reqwest = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["ssr"]
hydrate = [
    "leptos/hydrate",
    "leptos_router/hydrate",
    "leptos_meta/hydrate",
]
ssr = [
    "leptos/ssr",
    "leptos_router/ssr",
    "leptos_meta/ssr",
    "dep:leptos_axum",
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:tokio",
    "vostuff-core/server",  # Enable server features when building for SSR
]

[[bin]]
name = "vostuff-web"
path = "src/main.rs"
required-features = ["ssr"]
